--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,23 +1,43 @@
 <div class="row">
 
-	<div class="col s2">
+	<div class="col s3">
         <!-- Grey navigation panel -->
-        <div class="collection" *ngFor=" let product of products">
-          <a class="collection-item" (click)="showProduct(product);">{{product.name}}</a> 
+        <div class="collection" *ngFor=" let order of orders">
+          <a class="collection-item" (click)="showProduct(order)">{{order}}</a> 
         </div>
    	</div>
 
    	<div class="col s9" >
+      <div class="input-field col s6">
+       <input  id="user" type="text" class="validate" name="user" placeholder="ingrese un usuario" [(ngModel)]="user">
+      </div> 
+      <div class="input-field col s6">
+        <button class="waves-effect waves-light btn" (click)="getIdOrderByUser(user)">Search</button>
+      </div>
 		<div #gmap style="width:100%;height:400px"></div>
 	</div>
 
+  <div class="col s3">
+  </div>
+
 	<div class="col s9" *ngIf="show">
         <!-- Teal page content  -->
-        <h6>Detalles de la Orden</h6>
-		    <p><strong>Name: </strong>{{product.name}}</p>
-        <p><strong>ID: </strong>{{product.id}} </p>
-        <p><strong>Categoria: </strong>{{product.category.name}} </p>
-        <p><strong>Dir: </strong>{{final.lat}}-{{final.lng}}</p>
+
+        <div class="col md6" >
+          <h6><b>Detalles de la Orden</b></h6>
+ <!--<h3>{{items_res.items | json}}</h3>-->
+          <div *ngFor=" let item of items_res.items">
+          <h6><b>Id: </b>{{item.product.id}}, <b>Name: </b>{{item.product.name}}, <b>Quantity: </b> {{item.quantity}} ,<b> Address : </b>Latitude: {{items_res.trackingInfo.destination.latitude}}, Longitude: {{items_res.trackingInfo.destination.longitude}}</h6>  
+              <br>
+          </div>
+
+          
+          
+             
+          </div>
+        
+		   
+      
       </div>
 </div>	
 
