--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   <div class="nav-wrapper">
     <div class="brand-logo">HEALTH AT HOME</div>
     <ul class="right hide-on-med-and-down">
-      <li><a *ngIf="auth.loggedIn" (click)="auth.loggedIn = false" class="waves-effect waves-light btn">Salir</a></li>
+      <li><a *ngIf="auth.loggedIn" (click)="auth.loggedIn = false" class="waves-effect waves-light btn">Log out</a></li>
     </ul>
     <h6 class="center-align" *ngIf="auth.loggedIn" style="color:white">{{usuario.user}}</h6>
   </div> 
@@ -38,7 +38,7 @@
       </div>
     
     
-    <input type="submit" name="" value="ingresar" class="btn waves-effect bg-primary col s12">
+    <input type="submit" name="" value="sign in" class="btn waves-effect bg-primary col s12">
  
   </form>
 </div>
