--- a/src/app/components/add-products/add-products.component.html
+++ b/src/app/components/add-products/add-products.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<form class="col s12" (ngSubmit)="onSubmit()">
+	<form class="col s12" (ngSubmit)="onSubmit(product)">
 		<div class="row">
 		    <div class="input-field col s6">
 		        <input  id="id" type="text" class="validate" name="id" [(ngModel)] = "product.id">
