--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 
-	<div class="col s3" *ngIf="showOrders">
-        <!-- Grey navigation panel -->
+	<div class="col s3" *ngIf="showOrders" id="orders">
+        <!-- Ordenes del Usuario-->
         <h6><b>Orders</b>  {{userquema}}</h6>
         <div class="collection" *ngFor=" let order of orders">
           <a class="collection-item" (click)="showProduct(order)">{{order}}</a> 
@@ -13,7 +13,7 @@
         <input  id="user" type="text" class="validate" name="user" placeholder="ingrese un usuario" [(ngModel)]="user">
       </div> 
       <div class="input-field col s6">
-        <button class="waves-effect waves-light btn" (click)="getIdOrderByUser(user)">Search</button>
+        <button class="waves-effect waves-light btn" (click)="getIdOrderByUser(user)">Search Order</button>
       </div>
 		  <div #gmap style="width:100%;height:400px"></div>
 	</div>
@@ -21,12 +21,12 @@
   <div class="col s3">
   </div>
 
-	<div class="col s9" *ngIf="show">
-        <!-- Teal page content  -->
+	<div class="col s9" *ngIf="showDetailsOrder">
+        <!-- Detalles de la Orden  -->
 
         <div class="col md6" >
           <h6><b>Order Details</b></h6>
- <!--<h3>{{items_res.items | json}}</h3>-->
+           <!--<h3>{{items_res.items | json}}</h3>-->
           <div *ngFor=" let item of items_res.items">
           <h6><b>Id: </b>{{item.product.id}}, <b>Name: </b>{{item.product.name}}, <b>Precio: </b>{{item.product.eachPrice}}, <b> Quantity: </b> {{item.quantity}} ,<b> Address : </b>Latitude: {{items_res.trackingInfo.destination.latitude}}, Longitude: {{items_res.trackingInfo.destination.longitude}}</h6>  
               <br>
