--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,12 +29,12 @@
 
       <div class="input-field col s6">
         <i class="material-icons prefix">mail_outline</i>
-        <input type="text" [(ngModel)]= "usuario.user"  class="form-control" name="email" placeholder="Email">
+        <input type="text" [(ngModel)]= "usuario.user"  class="form-control" name="email" placeholder="User">
       </div>
 
       <div class="input-field col s6">
         <i class="material-icons prefix">lock_outline</i>
-        <input type="passWord" [(ngModel)]= "usuario.password" class="form-control"  name="pass" placeholder="Contraseña">
+        <input type="passWord" [(ngModel)]= "usuario.password" class="form-control"  name="pass" placeholder="Password">
       </div>
     
     
@@ -65,8 +65,8 @@
             <div class="row">
               <div class="col l6 s12">
                 <h5 class="white-text">HEALTH AT HOME S.A.</h5>
-                <p class="grey-text text-lighten-4">Health At Home se dedica a atender pacientes de forma remota y personalizada, tratando de hacer del servicio de salud mucho mejor para sus clientes.<br> 
-                Health At Home en este momento tiene presencia en 3 paises de suramerica y 2 europeos. En los paises de suramerica tiene servicio en la 3 principales ciudades de cada país y en los europeos en las 5 ciudades principales.</p>
+                <p class="grey-text text-lighten-4">Health At Home is dedicated to serving patients in a remote and personalized way, trying to make the health service much better for their clients.<br> 
+                Health At Home currently has a presence in 3 countries in South America and 2 in Europe. In the countries of South America it has service in the 3 main cities of each country and in Europeans in the 5 main cities.</p>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
             <div class="container">
             HEALTH AT HOME S.A.<br>
             Medellín, Antioquia, Colombia.<br>
-            Se recomienda utilizar Chrome o Mozilla Firefox en una resolución de 1024 x 768 o superior.
+            It is recommended to use Chrome or Mozilla Firefox in a resolution of 1024 x 768 or higher.
            © 2018 Copyright Text
             
             </div>
