--- a/src/app/components/add-products/add-products.component.html
+++ b/src/app/components/add-products/add-products.component.html
@@ -63,6 +63,6 @@
 	    </div>
 
 	 
-		 <input class="btn waves-effect waves-light" type="submit" value="Guardar" >
+		 <input class="btn waves-effect waves-light" type="submit" value="Save" >
  </form>
  </div> 
