--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -4,17 +4,22 @@
        
         <h6><b>Orders ({{numOrders}})</b>  {{userquema}}</h6>
         <div class="collection" *ngFor=" let order of orders">
-          <a class="collection-item" (click)="showProduct(order)">{{order}}</a> 
+          <a class="collection-item" (click)="showOrder(order)">{{order}}</a> 
         </div>
   </div>
  <!-- Map-->
   <div class="col s9" >
-      <div class="input-field col s6">
-        <input  id="user" type="text" class="validate" name="user" placeholder="Enter a user with orders" [(ngModel)]="user">
-      </div> 
-      <div class="input-field col s6">
-        <button class="waves-effect waves-light btn" (click)="getIdOrderByUser(user)">Search Order</button>
-      </div>
+      <form (ngSubmit)="getIdOrderByUser(user)" > 
+        <div class="input-field col s6">
+          <i class="material-icons prefix">mail_outline</i>
+          <input type="text" [(ngModel)]= "user"  class="form-control" name="user" placeholder="Enter a user with orders">
+        </div>
+
+        <div class="input-field col s6">
+          <input type="submit" name="" value="Search Order" class="btn waves-effect bg-primary">
+        </div>  
+      </form>
+
 		  <div #gmap style="width:100%;height:400px" *ngIf="showMap"></div>
 	</div>
 
@@ -23,14 +28,29 @@
 
  <!-- Detalles de la Orden  -->
 	<div class="col s9" *ngIf="showDetailsOrder">
-    <div class="col md6" >
-      <h6><b>Order Details</b></h6>
-      <!--<h3>{{items_res.items | json}}</h3>-->
-      <div *ngFor=" let item of items_res.items">
-        <h6><b>Id: </b>{{item.product.id}}, <b>Name: </b>{{item.product.name}}, <b>Price: </b>{{item.product.eachPrice}}, <b> Quantity: </b> {{item.quantity}} ,<b> Address : </b>Latitude: {{items_res.trackingInfo.destination.latitude}}, Longitude: {{items_res.trackingInfo.destination.longitude}}</h6>  
-          <br>
-      </div>
-    </div>
+    
+     <h6><b>Order Details</b></h6>
+      <table class="striped">
+        <thead>
+          <tr>
+              <th>Id</th>
+              <th>Name</th>
+              <th>Price</th>
+              <th>Quantity</th>
+          </tr>
+        </thead>
+
+        <tbody >
+          <tr *ngFor=" let item of items_res.items">
+            <td>{{item.product.id}}</td>
+            <td>{{item.product.name}}</td>
+            <td>{{item.product.eachPrice}}</td>
+            <td>{{item.quantity}}</td>
+          </tr>
+ 
+        </tbody>
+      </table>
+
   </div>
 </div>	
 
