--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -7,7 +7,7 @@
           <a class="collection-item" (click)="showOrder(order)">{{order}}</a> 
         </div>
   </div>
- <!-- Map-->
+ <!-- Search Order and Map-->
   <div class="col s9" >
       <form (ngSubmit)="getIdOrderByUser(user)" > 
         <div class="input-field col s6">
@@ -19,8 +19,16 @@
           <input type="submit" name="" value="Search Order" class="btn waves-effect bg-primary">
         </div>  
       </form>
-
-		  <div #gmap style="width:100%;height:400px" *ngIf="showMap"></div>
+      
+      <nav style="width:100%;height:70px; margin-top: 70px" *ngIf="showDetailsOrder">
+        <div class="nav-wrapper" >
+          <div class="col s12">
+           <h6>Track Travel History</h6>
+          </div>
+        </div>
+      </nav>
+		  
+      <div #gmap style="width:100%;height:400px" *ngIf="showMap"></div>
 	</div>
 
   <div class="col s3">
@@ -28,8 +36,15 @@
 
  <!-- Detalles de la Orden  -->
 	<div class="col s9" *ngIf="showDetailsOrder">
+    <nav>
+      <div class="nav-wrapper">
+        <div class="col s12">
+          <h6>Order Details</h6>
+        </div>
+      </div>
+    </nav>
     
-     <h6><b>Order Details</b></h6>
+   
       <table class="striped">
         <thead>
           <tr>
@@ -44,7 +59,7 @@
           <tr *ngFor=" let item of items_res.items">
             <td>{{item.product.id}}</td>
             <td>{{item.product.name}}</td>
-            <td>{{item.product.eachPrice}}</td>
+            <td>${{item.product.eachPrice}}</td>
             <td>{{item.quantity}}</td>
           </tr>
  
