--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -12,7 +12,7 @@
       <form (ngSubmit)="getIdOrderByUser(user)" > 
         <div class="input-field col s6">
           <i class="material-icons prefix">mail_outline</i>
-          <input type="text" [(ngModel)]= "user"  class="form-control" name="user" placeholder="Enter a user with orders">
+          <input type="text" [(ngModel)]= "user"  class="form-control" name="user" placeholder="Enter an user with orders">
         </div>
 
         <div class="input-field col s6">
@@ -23,7 +23,7 @@
       <nav style="width:100%;height:70px; margin-top: 70px" *ngIf="showDetailsOrder">
         <div class="nav-wrapper" >
           <div class="col s12">
-           <h6>Track Travel History</h6>
+           <h6>Trace History</h6>
           </div>
         </div>
       </nav>
